--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "wind": "npx tailwindcss -i ./resources/css/app.css -o ./public/css/output.css --watch"
     },
+    
     "devDependencies": {
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.8.0",
+        "tailwindcss": "^3.3.5",
         "vite": "^4.0.0"
     }
 }
