--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
         "build": "vite build",
         "wind": "npx tailwindcss -i ./resources/css/app.css -o ./public/css/output.css --watch"
     },
-    
     "devDependencies": {
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.8.0",
         "tailwindcss": "^3.3.5",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "sweetalert2": "^11.10.0"
     }
 }
