--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "sweetalert2": "^11.10.0"
+        "literallycanvas": "^0.5.2",
+        "sweetalert2": "^11.6.13"
     }
 }
